--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,8 +24,8 @@
     "app.email.title": "Send me an email!",
 
     "app.aboutme.content.title": "I'm ",
-    "app.aboutme.content.subtitle": "A french developer.",
-    "app.aboutme.content.desc": "I'm 17 years old and I'm currently in high school. I'm passionate about programming and I'm looking for small jobs in this field. I have a lot of experience in programming and I'm always looking to learn more & learn about new technologies! I believe that to be a good developer, you always have to learn about new programming languages, practices and rutimes. I'm a very motivated person and I'm always looking to improve myself.",
+    "app.aboutme.content.subtitle": "A american developer.",
+    "app.aboutme.content.desc": "I am a 13 year old developer, that lives in PA. I specialize in Eaglercraft, and HTML.",
     "app.aboutme.content.btn": "My resume",
     
     "app.aboutwebsite.content.useadvice": "Use this portfolio like you would use a real operating system.",
